minor bug fix for down arrow on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -1001,6 +1001,10 @@ section, section > div, .pagination, .pagination > div, section.whatProject, .fo
     right:50px;
 }
 
+.featured .downArrow{
+    margin-top:100px;
+}
+
 .downArrow:hover, .downArrow.hovered{
     padding-top:20px;
     margin-bottom:-10px;
@@ -1515,6 +1519,10 @@ section, section > div, .pagination, .pagination > div, section.whatProject, .fo
 
     .channels.light{
         fill:#000;
+    }
+
+    .featured .downArrow{
+        margin-top:0;
     }
 }
 
